Fixes for CI, adding one-time commands into the user model

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ env:
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['main', 'master']
-    paths-ignore: ['docs/**']
+    branches: ["main", "master"]
+    paths-ignore: ["docs/**"]
 
   push:
-    branches: ['main', 'master']
-    paths-ignore: ['docs/**']
+    branches: ["main", "master"]
+    paths-ignore: ["docs/**"]
 
 # -- these are not in the sample file ...
 concurrency:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version-file: '.python-version'
+          python-version-file: ".python-version"
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
 
@@ -51,9 +51,9 @@ jobs:
           POSTGRES_PASSWORD: postgres
 
     env:
-      REDIS_URL: 'redis://localhost:6379/0'
+      REDIS_URL: "redis://localhost:6379/0"
       # postgres://user:password@host:port/database
-      DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
+      DATABASE_URL: "postgres://postgres:postgres@localhost:5432/postgres"
 
     steps:
       - name: Checkout Code Repository
@@ -80,7 +80,7 @@ jobs:
 
       - name: Test with pytest
         run: uv run pytest
-#--------------------------------------------------------------------------------------
+      #--------------------------------------------------------------------------------------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         if: |
@@ -91,23 +91,25 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
           aws-region: ${{ secrets.AWS_CODEDEPLOY_REGION }}
-# AWS CLI Docs: https://docs.aws.amazon.com/codedeploy/latest/userguide/deployments-create-cli.html
+      # AWS CLI Docs: https://docs.aws.amazon.com/codedeploy/latest/userguide/deployments-create-cli.html
       - name: Deploy to CodeDeploy
         # success() checks if the previous job was canceled or not
         if: ${{ success() }}
         env:
           DEPLOYMENT_GROUP: ${{ secrets.AWS_CODEDEPLOY_DEPLOYMENT_GROUP }}
           DEPLOY_APP_NAME: ${{ secrets.AWS_CODEDEPLOY_APPLICATION_NAME }}
+          AWS_REGION: ${{ secrets.AWS_CODEDEPLOY_REGION }}
         run: |
           aws deploy create-deployment \
           --deployment-group-name "$DEPLOYMENT_GROUP" \
           --description="$GITHUB_SHA" \
           --application-name "$DEPLOY_APP_NAME" \
-          --github-location repository="$GITHUB_REPOSITORY",commitId="$GITHUB_SHA"
+          --region "$AWS_REGION" \
+          --github-location repository="$GITHUB_REPOSITORY",commitId="$GITHUB_SHA" \
 
-# You need to change this section for your single-execution per-deployment script
-# based on your needs
-#--------------------------------------------------------------------------------------
+      # You need to change this section for your single-execution per-deployment script
+      # based on your needs
+      #--------------------------------------------------------------------------------------
       - name: Run single-execution per-deployment script
         # success() checks whether the previous job was successful
         if: ${{ success() }}
@@ -115,6 +117,5 @@ jobs:
           CI_CD_DEPLOYMENT_AUTH_TOKEN: ${{ secrets.CI_CD_DEPLOYMENT_AUTH_TOKEN }}
         # Migrate so we can eventually check the latest migration
         run: python manage.py deployment
-
 # Change ends here
 #--------------------------------------------------------------------------------------
