--- a/appspec.yml
+++ b/appspec.yml
@@ -6,7 +6,7 @@ os: linux
 # Spacing docs: https://docs.aws.amazon.com/codedeploy/latest/userguide/reference-appspec-file.html#reference-appspec-file-spacing
 files:
   - source: /
-    destination: /app
+    destination: /home/ubuntu
 file_exists_behavior: OVERWRITE
 # This last point isn't needed since Blue/Green brings up new instances, but maybe
 # some installation script like ./install could get in the way.
