Changing some dependabot stuff to retry deployment

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,16 +14,16 @@ updates:
         patterns:
           - '*'
 
-  # Enable version updates for Python/Pip - Production
-  - package-ecosystem: 'pip'
-    # Look for a `requirements.txt` in the `root` directory
-    # also 'setup.cfg', '.python-version' and 'requirements/*.txt'
-    directory: '/'
-    # Every weekday
-    schedule:
-      interval: 'daily'
-    groups:
-      python:
-        update-types:
-          - 'minor'
-          - 'patch'
+  # # Enable version updates for Python/Pip - Production
+  # - package-ecosystem: 'pip'
+  #   # Look for a `requirements.txt` in the `root` directory
+  #   # also 'setup.cfg', '.python-version' and 'requirements/*.txt'
+  #   directory: '/'
+  #   # Every weekday
+  #   schedule:
+  #     interval: 'daily'
+  #   groups:
+  #     python:
+  #       update-types:
+  #         - 'minor'
+  #         - 'patch'
