Initial setup of eb

--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,8 @@ sdm_platform/media/
 
 .envs/.production
 .envs/.local/.secrets
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
