--- a/requirements.txt
+++ b/requirements.txt
@@ -321,7 +321,7 @@ oauthlib==3.3.1
     # via
     #   kubernetes
     #   requests-oauthlib
-onnxruntime==1.23.2
+onnxruntime>=1.23.2
     # via chromadb
 openai==2.8.1
     # via
